# spaghetti-kugel-cookiecutter

./: cookiecutter.json
.github/: ISSUE_TEMPLATE.md
python/: pyproject.toml
python/docs/: pypi_release_checklist.rst
python/{{cookiecutter.project_slug}}/: setup.cfg
